@@ -1,3 +1,9 @@
+2010-10-17 S. Thiell <stephane.thiell@cea.fr>
+
+	* CLI/Clush.py: Changed the way of reading stdin, which is now based on
+	blocking reads using a specified thread and thread-safe messaging with
+	acknowledgement using a task port (part of trac ticket #56).
+
 2010-10-11 S. Thiell <stephane.thiell@cea.fr>
 
 	* Worker/Worker.py: Add Worker.abort() base method and ensure proper
